<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/module_warning_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/video_warning_title_info"
        android:textColor="@android:color/white"
        android:textSize="40px"
        android:layout_marginTop="90px"/>

    <TextView
        android:id="@+id/tv_show_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="182px"
        android:textSize="34px"
        android:gravity="center"
        android:text="@string/video_warning_content_info"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="190px"
        android:layout_height="80px"
        android:text="@string/video_warning_button_info"
        android:textSize="36px"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="163px"
        android:background="@drawable/module_btn_bg_selector"/>

</RelativeLayout>